--- a/Scripts/2.0_GLUCOSE.Rmd
+++ b/Scripts/2.0_GLUCOSE.Rmd
@@ -19,7 +19,7 @@ pacman::p_load(lmerTest,ggThemeAssist,rptR,lme4,readxl, tidyr, dplyr, magrittr, 
 
 ```{r}
 #Import data
-Glucose <- read.csv("Data/Glucose/Glucose_Data.csv") #check this works, issues with file directories
+Glucose <- read.csv("../Data/Glucose/Glucose_Data.csv") #check this works, issues with file directories
 str(Glucose)
 
 #Check structure
@@ -31,22 +31,30 @@ hist(Glucose$Glucose)
 
 
 
-Boxplot_Glucose <- ggplot(data = Glucose) +
-  geom_boxplot(mapping = aes(x = Sex, y = Glucose, fill = Group)) +
-  facet_grid(~Group)
+glucose_f1 <- ggplot(Glucose, aes(x=Group, y=Glucose, fill = Group)) + 
+  geom_violin()+
+  geom_jitter(height = 0, width = 0.1)
 
-Boxplot_Glucose
+glucose_f1
 
-Summary_Glucose <- summarySE(Glucose_Weight, measurevar="Glucose", groupvars=c("Group", "Sex"))
 
 Repeatability_Glucose <- rpt(Glucose ~ Meter + Sex + Group + (1 | Fish_ID), grname = "Fish_ID", data = Glucose, datatype = "Gaussian", 
-                           nboot = 100, npermut = 100)
+                           nboot = 1000, npermut = 1000)
 
 Repeatability_Glucose
 
-Mixed_Model_Glucose <- lmer(Glucose ~ Sex + Group + (1|Fish_ID), data=Glucose)
+Mixed_Model_Glucose <- lmer(Glucose ~ Group + Sex + Weight + (1|Fish_ID), data=Glucose)
 summary(Mixed_Model_Glucose)
 tab_model(Mixed_Model_Glucose)
+hist(residuals(Mixed_Model_Glucose)) #Transform ?
+
+
+# Calculating difference in variance between control and treatment group 
+Model_Glucose_1 <- lme(Glucose ~ Group + Sex, random = ~ 1| Fish_ID, data = Glucose, na.action = na.omit) #Mixed model without variance structure
+summary(Model_Glucose_1)
+Model_Glucose_2 <- lme(Glucose ~ Group + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Group), data = Glucose, na.action = na.omit) #mixed model with variance structure varIdent
+summary(Model_Glucose_2)
+anova(Model_Glucose_1, Model_Glucose_2)
 
 ```
 
